fix random spacing

--- a/bar/bar.scss
+++ b/bar/bar.scss
@@ -71,7 +71,7 @@ window.Bar {
 
     .Media {
         .Player {
-            margin-bottom: 5px;
+            margin-bottom: 0px;
             background-color: colors.$surface1;
             border-radius: 20px;
             .Cover {
